[project]
name = "llm-over-dns"
version = "0.1.0"
description = "Connect to an LLM over DNS"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
  "dnslib>=0.9.25",
  "openai>=1.37.0",
  "anthropic>=0.30.0",
  "dotenv>=0.9.9",
]

[project.scripts]
llm-over-dns = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["utils"]
